# readsb-mongodb

./: .gitignore  Cargo.toml
src/: main.rs
src/controller/: aircraft.rs  db_interface.rs  metadata.rs  mod.rs  process_data.rs  registration.rs
src/utils/: config.rs
