[package]
name = "readsb-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0.136"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
mongodb = "2.3.1"
toml = "0.5.2"
log = "0.4"
chrono = "0.4.22"
fern = "0.6"
serde_derive = "1.0.147"
strum = "0.24"
strum_macros = "0.24"
libmath = "0.2.1"
radix_fmt = "1.0.0"
